--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,5 @@ spring.datasource.password=smart
 spring.datasource.url=jdbc:postgresql://localhost:5432/smart
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
-server.session.cookie.domain=Smart Community v-1.0_DEMO
+server.session.timeout=600
+server.port=8090
